# murmur_api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  code_quality_ci.yml
app/: main.py
app/api/: metrics.py  routes.py
app/db/: create_table.sql  crud.py  database.py
app/models/: db_model.py  whisper_model.py
app/schemas/: db_schema.py  transcription.py
manifests/: api-cm0-configmap.yaml  api-deployment.yaml  api-service.yaml  db-cm1-configmap.yaml  db-deployment.yaml  db-service.yaml  env-configmap.yaml  service.yml
tests/: test_api.py
