[project]
name = "murmur-api"
version = "0.1.0"
description = "ASR project on FastAPI"
readme = "README.md"
authors = [
    { name = "architjen", email = "architjen010@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "python-multipart>=0.0.5",
    "pydantic>=2.10.6",
    "ctranslate2==4.3.1",
    "faster-whisper==1.0.1",
    "sqlalchemy[asyncio]>=2.0.40",
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.30.0",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
]

[tool.ruff.lint]
extend-select = ["E", "W"]

[tool.pytest.ini_options]
testpaths = ["tests/"]
